@startuml x-act-erd

!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#262626><&media-record></color> x
!define table(x) entity x << (T, white) >>

table(Users) {
    primary_key(user_id) : INTEGER
    --
    column(username) : VARCHAR(50) NULL
    column(email) : VARCHAR(100) NULL
    column(account_type) : ENUM('FREE', 'PRO', 'EVENT_PASS')
    column(subscription_end_date) : TIMESTAMP
    column(total_wins) : INTEGER
    column(total_games_played) : INTEGER
    column(is_deleted) : BOOLEAN
    column(deleted_at) : TIMESTAMP
    column(created_at) : TIMESTAMP
}

table(User_Auth_Identities) {
    primary_key(auth_identity_id) : INTEGER
    --
    foreign_key(user_id) : INTEGER
    --
    column(provider) : ENUM('LOCAL', 'GOOGLE', 'APPLE')
    column(provider_subject) : VARCHAR(255)
    column(password_hash) : VARCHAR(255) NULL
    column(created_at) : TIMESTAMP
}

table(Game_Sessions) {
    primary_key(session_id) : INTEGER
    --
    foreign_key(host_user_id) : INTEGER
    --
    column(session_name) : VARCHAR(120)
    column(join_code) : VARCHAR(6)
    column(status) : ENUM('WAITING', 'ACTIVE', 'FINISHED')
    column(start_time) : TIMESTAMP
    column(end_time) : TIMESTAMP
    column(planned_duration_minutes) : INTEGER
    column(mr_x_reveal_interval) : INTEGER
    column(created_at) : TIMESTAMP
}

table(Geofence_Points) {
    primary_key(point_id) : INTEGER
    --
    foreign_key(session_id) : INTEGER
    --
    column(latitude) : DOUBLE
    column(longitude) : DOUBLE
    column(sequence_order) : INTEGER
}

table(Teams) {
    primary_key(team_id) : INTEGER
    --
    foreign_key(session_id) : INTEGER
    --
    column(team_name) : VARCHAR(50)
    column(role) : ENUM('MR_X', 'DETECTIVE', 'SPECTATOR')
    column(color_code) : VARCHAR(7)
    column(is_caught) : BOOLEAN
}

table(Team_Members) {
    primary_key(member_id) : INTEGER
    --
    foreign_key(session_id) : INTEGER
    foreign_key(team_id) : INTEGER
    foreign_key(user_id) : INTEGER NULL
    --
    column(guest_name) : VARCHAR(50) NULL
    column(is_team_leader) : BOOLEAN
    column(joined_at) : TIMESTAMP
    column(current_latitude) : DOUBLE
    column(current_longitude) : DOUBLE
    column(last_updated) : TIMESTAMP
}

table(Location_Logs) {
    primary_key(log_id) : INTEGER
    --
    foreign_key(member_id) : INTEGER
    --
    column(timestamp) : TIMESTAMP
    column(latitude) : DOUBLE
    column(longitude) : DOUBLE
    column(accuracy_meters) : DOUBLE
    column(transport_mode) : ENUM('FOOT', 'BUS', 'TRAM', 'TRAIN')
    column(is_revealed_position) : BOOLEAN
}

table(Power_Up_Usage) {
    primary_key(usage_id) : INTEGER
    --
    foreign_key(member_id) : INTEGER
    --
    column(power_up_type) : ENUM('BLACK_TICKET', 'DOUBLE_MOVE')
    column(used_at) : TIMESTAMP
}

Users ||..o{ User_Auth_Identities : "owns auth identities"
Users ||..o{ Team_Members : "joins as member (optional for guests)"
Users ||..o{ Game_Sessions : "hosts"

Game_Sessions ||--|{ Teams : "consists of"
Game_Sessions ||--|{ Geofence_Points : "defined by boundary"
Game_Sessions ||--|{ Team_Members : "contains participants"

Teams ||--|{ Team_Members : "has members"

Team_Members ||--o{ Location_Logs : "tracks movement"
Team_Members ||--o{ Power_Up_Usage : "uses ability"

@enduml
